Made the profile picuters visible and some minor fixes in script.js

--- a/styles.css
+++ b/styles.css
@@ -43,20 +43,51 @@ h2 {
     background-color: purple;
 }
 
+.result-filter:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.information {
+    margin-top: 15px;
+}
+
+span#name, span#status{
+    font-size: 25px;
+}
+
+span#name {
+    position: relative;
+    left: 20px;
+}
+
+span#status {
+    float: right;
+    position: relative;
+    left: -20px;
+}
+
 #results {
     list-style: none;
     width: 100%;
 }
 
 #results li {
-    height: 20px;
+    height: 30px;
     padding: 30px;
     width: 95%;
     position: relative;
     left: -40px;
     border-bottom: 1px black solid;
     text-decoration: none;
+    font-weight: 500;
 
+}
+
+img {
+   width: 40px;
+    height: 50px;
 }
 
 a:link, a:visited, a:hover {
